# mlxfast-challenge-dev

./: .gitignore  AUDIT.md  CHALLENGE.md  Package.resolved  Package.swift  README.md  SPEC.md  benchmark.json  benchmark.sh  private_prompts.json  pyproject.toml  setup.sh  transform.py
.github/scripts/: enforce-modifiable-surface.sh
.github/workflows/: benchmark.yml  ci.yml  preserve-correctness-golden.yml
Sources/MLXFastCLI/: Submission.swift  main.swift
Sources/MLXFastCore/: Constants.swift  Errors.swift  ExpertStreamingStats.swift  FileSize.swift  Golden.swift  PathValidation.swift  Safetensors.swift  Score.swift  TensorData.swift
Sources/MLXFastDeepSeek/: BenchmarkSupport.swift  DeepSeekAttention.swift  DeepSeekBlock.swift  DeepSeekCache.swift  DeepSeekConfig.swift  DeepSeekCorrectness.swift  DeepSeekExperts.swift  DeepSeekFeedForward.swift  DeepSeekHyperConnection.swift  DeepSeekLinearWeight.swift  DeepSeekMoEGate.swift  DeepSeekModel.swift  DeepSeekOps.swift  DeepSeekRoPE.swift  DeepSeekRuntime.swift  DeepSeekRuntimeWeights.swift  DeepSeekWeights.swift  DenseTensorStore.swift  ExpertSlotBank.swift  ExpertStreaming.swift  MLXTensorBridge.swift
Sources/MLXFastDeepSeekHarness/: BenchmarkSupport.swift  DeepSeekCorrectness.swift  DeepSeekRuntime.swift
Sources/MLXFastHarness/: TransformVerification.swift
Sources/MLXFastSubmission/: Submission.swift  YukonClient.swift  YukonSubmissionUploader.swift
Sources/MLXFastTransform/: CheckpointIndex.swift  Transform.swift
Tests/MLXFastTests/: BenchmarkSupportTests.swift  CheckpointIndexTests.swift  DeepSeekAttentionTests.swift  DeepSeekBlockTests.swift  DeepSeekCacheTests.swift  DeepSeekConfigTests.swift  DeepSeekCorrectnessTests.swift  DeepSeekExpertsTests.swift  DeepSeekFeedForwardTests.swift  DeepSeekHyperConnectionTests.swift  DeepSeekMoEGateTests.swift  DeepSeekModelTests.swift  DeepSeekOpsTests.swift  DeepSeekRoPETests.swift  DeepSeekWeightLoaderTests.swift  DenseTensorStoreTests.swift  ExpertSlotBankTests.swift  GoldenTests.swift  MLXTensorBridgeTests.swift  SafetensorsTests.swift  ScoreTests.swift  SubmissionTests.swift  TensorDataTests.swift  TransformTests.swift
fixtures/: correctness_golden_512_2048.json  correctness_golden_512_256_benchmark512.json  correctness_golden_512_512.json
mlx_models/: base.py
mlx_models/deepseek_v4/: deepseek_v4.py  hyper_connection.py
mlx_models/gemma4/: __init__.py  experts.py  linear.py  model.py  weights.py
mlx_models/mlx_lm_shims/: switch_layers.py
mlxfast/: _harness_runner.py  _sandbox.py  cli.py
mlxfast/_reference/: __init__.py  reference_bank.py
mlxfast/harness/: bandwidth.py  constants.py  correctness.py  run.py
prompts/: benchmark_local.txt  correctness_local.txt
quantizationfail/: __init__.py  _harness_runner.py  _sandbox.py  _self_hash.py  cli.py
quantizationfail/harness/: __init__.py  bandwidth.py  constants.py  correctness.py  run.py  score.py
scripts/: make_prompts.py
spec/: prompt-design.md
tools/: benchmark_contract.py  build-mlx-metallib.sh
